@@ -57,10 +57,11 @@ rgb(red, green, blue, alpha, names = NULL, maxColorValue = 1)
   \code{green} or \code{alpha}.
 }
 \value{
-  A character vector with elements of 7 or 9 characters, \code{"#"}
-  followed by the red, blue, green and optionally alpha values in
-  hexadecimal (after rescaling to \code{0 ... 255}).  The optional alpha
-  values range from \code{0} (fully transparent) to \code{255} (opaque).
+  A character vector with elements of 7 or 9 characters,
+  beginning with \code{"#"} followed by the red, 
+  blue, green and optionally alpha values in hexadecimal (after 
+  rescaling to \code{0 ... 255}).  The optional alpha values range 
+  from \code{0} (fully transparent) to \code{255} (opaque). 
 
   \R does \strong{not} use \sQuote{premultiplied alpha}.
 }
